fix: workflow 수정

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,6 +28,19 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name : Set up JDK 17
+      uses : actions/setup-java@v3
+      with :
+        distribution : 'temurin'
+        java-version : '17'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build -x test
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
